# gitkyl

./: .clippy.toml  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: release.yml
assets/: base.css  blob.css  commits.css  index.css  markdown.css  page-blob.css  page-commits.css  page-index.css  page-tags.css  page-tree.css  tree.css
assets/components/: file-list.css  layout.css  nav.css
src/: assets.rs  avatar.rs  components.rs  config.rs  filetype.rs  generators.rs  git.rs  highlight.rs  lib.rs  main.rs  markdown.rs  pages.rs  path.rs  time.rs  tree.rs  util.rs
src/components/: commit.rs  file_list.rs  footer.rs  icons.rs  layout.rs  metadata.rs  nav.rs
src/markdown/: links.rs  renderer.rs
src/pages/: blob.rs  commits.rs  index.rs  tags.rs  tree.rs
tests/: common.rs  component_test.rs  e2e_test.rs  integration_test.rs  workflow_test.rs
